--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "framework7-icons": "^5.0.5",
     "material-icons": "^1.13.12",
     "skeleton-elements": "^4.0.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "cpy-cli": "^5.0.0",
