--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "axios": "^1.7.7",
     "dom7": "^4.0.6",
     "framework7": "^8.3.3",
     "framework7-icons": "^5.0.5",
